# cv_api

./: .gitignore  CV.postman_collection.json  README.md  db_schema.txt  main.py  models.py  pyproject.toml
