[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["mipakiet <mikolajpakiet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
marshmallow = "^3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
